--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -83,6 +83,7 @@
             android:importantForAutofill="no" />
 
         <Button
+            android:id="@+id/btn_login"
             android:layout_marginTop="22dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
