register and listview

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    tools:context=".RegisterActivity">
+    tools:context=".userInterface.RegisterActivity">
 
     <ImageView
         android:id="@+id/button_back"
