--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/putih"
-    tools:context=".DashboardActivity">
+    tools:context=".userInterface.DashboardActivity">
 
     <FrameLayout
         android:id="@+id/main_frame"
