--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    tools:context=".LoginActivity">
+    tools:context=".userInterface.LoginActivity">
 
     <ImageView
         android:id="@+id/button_back"
@@ -45,6 +45,17 @@
         android:layout_alignParentBottom="true"
         android:orientation="vertical">
 
+        <ProgressBar
+            android:id="@+id/progressbar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            android:max="100"
+            android:backgroundTint="@color/putih"
+            android:indeterminateTint="#1a09d6"
+            android:layout_marginTop="-7dp"/>
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -53,6 +64,7 @@
             android:textStyle="bold"
             android:textColor="@android:color/black"/>
         <EditText
+            android:id="@+id/email_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/shape_radius_white_corner"
@@ -72,6 +84,7 @@
             android:layout_marginTop="16dp"
             android:textColor="@android:color/black"/>
         <EditText
+            android:id="@+id/password_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/shape_radius_white_corner"
