--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/background"
-    tools:context=".HomeFragment">
+    tools:context=".userInterface.HomeFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -250,8 +250,8 @@
                 android:layout_marginTop="12dp"
                 android:textStyle="bold"/>
 
-            <ListView
-                android:id="@+id/list_recrnt"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/list_recent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
