--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -12,8 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/bottom"
-        android:layout_marginBottom="20dp"
         android:layout_alignParentStart="true"
+        android:layout_marginBottom="-20dp"
         android:layout_alignParentTop="true"/>
 
 
@@ -22,7 +22,7 @@
         app:labelVisibilityMode="unlabeled"
         android:layout_width="match_parent"
         android:id="@+id/bottom"
-        android:layout_height="63dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         app:itemTextColor="@drawable/selector"
         app:itemIconTint="@drawable/selector"/>
