--- a/app/src/main/res/layout/fragment_notifikasi.xml
+++ b/app/src/main/res/layout/fragment_notifikasi.xml
@@ -3,9 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/background"
-    tools:context=".userInterface.ListOrderFragment">
+    tools:context=".userInterface.NotifikasiFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -28,7 +26,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="List Order"
+                android:text="Notifikasi"
                 android:textColor="@color/putih"
                 android:fontFamily="@font/poppins"
                 android:textStyle="bold"
@@ -59,7 +57,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Pesanan"
+                android:text="Hari ini"
                 android:textColor="@color/abuabu"
                 android:fontFamily="@font/roboto"
                 android:textSize="18sp"
@@ -68,7 +66,7 @@
                 android:textStyle="bold"/>
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/list_recent"
+                android:id="@+id/list_notifikasi"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
