--- a/app/src/main/res/layout/fragment_profil.xml
+++ b/app/src/main/res/layout/fragment_profil.xml
@@ -8,14 +8,15 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/background">
+        android:background="@color/background"
+        tools:ignore="UselessParent">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/laundrybg"
             android:layout_alignParentEnd="true"
-            android:layout_marginRight="-80dp"
+            android:layout_marginEnd="-80dp"
             android:layout_marginTop="-30dp"
             android:scaleType="fitXY"
             android:layout_alignParentTop="true"
@@ -36,7 +37,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Profile"
+                android:text="@string/profile"
                 android:textColor="@color/putih"
                 android:fontFamily="@font/poppins"
                 android:textStyle="bold"
@@ -44,6 +45,7 @@
                 android:layout_centerInParent="true"/>
 
             <TextView
+                android:id="@+id/logout_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="    Logout"
@@ -72,6 +74,7 @@
                 android:src="@drawable/fotoexample"
                 android:layout_gravity="center_horizontal"/>
             <TextView
+                android:id="@+id/nama_laundry"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Nama Laundry"
@@ -81,6 +84,7 @@
                 android:textSize="18sp"
                 android:layout_gravity="center_horizontal"/>
             <TextView
+                android:id="@+id/email_laundry"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/email_example_com"
@@ -109,6 +113,7 @@
             android:layout_marginTop="6dp"
             android:textStyle="bold"/>
             <TextView
+                android:id="@+id/nama_pemilik"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Nama Pemilik"
@@ -129,6 +134,7 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/nomor_tlp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="081234567890"
@@ -149,6 +155,7 @@
                 android:textStyle="bold"/>
 
             <TextView
+                android:id="@+id/alamat_laundry"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="22dp"
